[gd_scene load_steps=43 format=3 uid="uid://d4atu3dhcoefp"]

[ext_resource type="FontFile" uid="uid://qgku7moi1efd" path="res://assets/fonts/scribbles.ttf" id="1"]
[ext_resource type="PackedScene" path="res://scenes/game/characters/health.tscn" id="2_7n873"]
[ext_resource type="PackedScene" uid="uid://cdoq8vp2mm8u1" path="res://scenes/game/characters/player/player_dead.tscn" id="2_lucr1"]
[ext_resource type="Script" path="res://scenes/game/item/item_data_weapon.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://clgjw8wxkuusx" path="res://assets/textures/shotgun-sheet.png" id="7"]
[ext_resource type="PackedScene" uid="uid://dxrcx1liop62p" path="res://scenes/game/inventory/hotbar_inventory.tscn" id="8"]
[ext_resource type="Texture2D" uid="uid://csgmb3e5wy837" path="res://assets/textures/punch-sheet.png" id="9"]
[ext_resource type="Script" path="res://scenes/game/inventory/slot_data.gd" id="9_8be04"]
[ext_resource type="Script" path="res://scenes/game/item/item_data.gd" id="9_kwuh7"]
[ext_resource type="Texture2D" uid="uid://br5grrh1ej20j" path="res://assets/textures/panel_rect.png" id="10"]
[ext_resource type="Texture2D" uid="uid://we0sue4i3r05" path="res://assets/textures/bar_fill.png" id="11"]
[ext_resource type="Script" path="res://scenes/game/characters/player/notifications.gd" id="12"]
[ext_resource type="Script" path="res://scenes/game/characters/player/player_weapon.gd" id="13"]
[ext_resource type="Script" path="res://scenes/game/characters/player/player_weapon_manager.gd" id="14"]
[ext_resource type="Script" path="res://scenes/game/characters/player/player.gd" id="15"]
[ext_resource type="Texture2D" uid="uid://bxf0efd2q4qmn" path="res://assets/textures/bar_border.png" id="18"]
[ext_resource type="Script" path="res://scenes/game/textured_ui_bar.gd" id="18_fpf0a"]
[ext_resource type="AudioStream" uid="uid://74ffi73b3myc" path="res://assets/audio/player/weapons/player_fists_swing.wav" id="21"]
[ext_resource type="AudioStream" uid="uid://s3aac53x8yi1" path="res://assets/audio/player/weapons/shotgun/player_shotgun_shot.wav" id="22"]

[sub_resource type="CapsuleShape3D" id="1"]
height = 2.5

[sub_resource type="BoxShape3D" id="2"]
size = Vector3(0.5, 0.5, 1)

[sub_resource type="Resource" id="25"]
script = ExtResource("4")
max_ammo = 0
damage = 1
damage_type = 0
name = "fists"
description = ""
stackable = false
price = 0
item_type = 4

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="4"]
resource_name = "attack"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="5"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1i5p2"]
_data = {
"RESET": SubResource("3"),
"attack": SubResource("4"),
"idle": SubResource("5")
}

[sub_resource type="Resource" id="Resource_i1tml"]
script = ExtResource("9_kwuh7")
name = "test_ammo_delete"
description = "test ammo, delete"
stackable = false
price = 999
item_type = 4

[sub_resource type="Resource" id="Resource_v44b8"]
script = ExtResource("9_8be04")
item_data = SubResource("Resource_i1tml")
quantity = 1

[sub_resource type="Resource" id="Resource_71jn7"]
script = ExtResource("4")
max_ammo = 4
ammo_slot = SubResource("Resource_v44b8")
damage = 5
damage_type = 1
name = "test weapon"
description = "test, delete"
stackable = true
price = 999
item_type = 4

[sub_resource type="Animation" id="13"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../muzzle_flash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="14"]
resource_name = "attack"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.2, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 0, 4, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../muzzle_flash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="15"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ecwd5"]
_data = {
"RESET": SubResource("13"),
"attack": SubResource("14"),
"idle": SubResource("15")
}

[sub_resource type="StyleBoxFlat" id="27"]
bg_color = Color(0, 0, 0, 0.705882)

[sub_resource type="LabelSettings" id="LabelSettings_a1e3n"]
font = ExtResource("1")
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_ecj5b"]
font = ExtResource("1")
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_rl7ch"]
font = ExtResource("1")
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_wbsqx"]
font = ExtResource("1")
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_uehl5"]
font = ExtResource("1")
font_size = 35

[sub_resource type="FontFile" id="8"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/35/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/35/0 = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="29"]
texture = ExtResource("10")
region_rect = Rect2(6, 8, 240, 110)
modulate_color = Color(0.0431373, 0.0431373, 0.0431373, 0.215686)

[sub_resource type="FontFile" id="20"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/45/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/45/0 = Vector2(0, 0)
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/25/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/45/0 = Vector2(0, 0)
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/35/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/45/0 = Vector2(0, 0)
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/40/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/45/0 = Vector2(0, 0)
cache/0/45/0/ascent = 0.0
cache/0/45/0/descent = 0.0
cache/0/45/0/underline_position = 0.0
cache/0/45/0/underline_thickness = 0.0
cache/0/45/0/scale = 1.0
cache/0/45/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/45/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/45/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/45/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/45/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/45/0/kerning_overrides/45/0 = Vector2(0, 0)

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("health", "head", "camera", "camera_smooth", "interact_area", "hint_raycast", "pickup_raycast", "hold_object_pos", "weapon_manager", "health_bar", "pox_bar", "armor_bar", "ground_raycast", "stairs_ahead_raycast", "stairs_below_raycast")]
collision_layer = 8
script = ExtResource("15")
health = NodePath("Health")
head = NodePath("HeadOriginalPosition")
camera = NodePath("HeadOriginalPosition/Head/CameraSmooth/Camera3D")
camera_smooth = NodePath("HeadOriginalPosition/Head/CameraSmooth")
interact_area = NodePath("HeadOriginalPosition/Head/CameraSmooth/Camera3D/InteractArea")
hint_raycast = NodePath("HeadOriginalPosition/Head/CameraSmooth/Camera3D/HintObjRayCast")
pickup_raycast = NodePath("HeadOriginalPosition/Head/CameraSmooth/Camera3D/PickupRayCast")
hold_object_pos = NodePath("HeadOriginalPosition/Head/CameraSmooth/Camera3D/PickupRayCast/HoldObjectPosition")
weapon_manager = NodePath("HeadOriginalPosition/Head/CameraSmooth/Camera3D/WeaponManager")
health_bar = NodePath("UI/Bars/health_pox/health_bar")
pox_bar = NodePath("UI/Bars/health_pox/pox_bar")
armor_bar = NodePath("UI/Bars/health_pox/armor_bar")
player_dead_prefab = ExtResource("2_lucr1")
ground_raycast = NodePath("GroundRaycast")
stairs_ahead_raycast = NodePath("StairsAheadRaycast3D")
stairs_below_raycast = NodePath("StairsBelowRaycast3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
shape = SubResource("1")

[node name="Health" parent="." instance=ExtResource("2_7n873")]
allowed_max_health = 25

[node name="GroundRaycast" type="RayCast3D" parent="."]
target_position = Vector3(0, -999, 0)

[node name="StairsAheadRaycast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, -0.55, 0)

[node name="StairsBelowRaycast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
target_position = Vector3(0, -0.75, 0)

[node name="HeadOriginalPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3, 0)

[node name="Head" type="Node3D" parent="HeadOriginalPosition"]
unique_name_in_owner = true

[node name="CameraSmooth" type="Node3D" parent="HeadOriginalPosition/Head"]

[node name="Camera3D" type="Camera3D" parent="HeadOriginalPosition/Head/CameraSmooth"]
cull_mask = 1048571
far = 75.0

[node name="HintObjRayCast" type="RayCast3D" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D"]
target_position = Vector3(0, 0, -3)
collision_mask = 2
collide_with_areas = true

[node name="PickupRayCast" type="RayCast3D" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D"]
target_position = Vector3(0, 0, -3)
collision_mask = 2

[node name="HoldObjectPosition" type="Node3D" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D/PickupRayCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, -1.5)

[node name="InteractArea" type="Area3D" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.3)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D/InteractArea"]
shape = SubResource("2")

[node name="WeaponManager" type="Node3D" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D"]
script = ExtResource("14")

[node name="wep_fists" type="Node3D" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D/WeaponManager"]
script = ExtResource("13")
is_melee = true
item_weapon_data = SubResource("25")

[node name="RangeRayCast" type="RayCast3D" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D/WeaponManager/wep_fists"]
target_position = Vector3(0, 0, -3)
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D/WeaponManager/wep_fists"]
libraries = {
"": SubResource("AnimationLibrary_1i5p2")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D/WeaponManager/wep_fists"]
stream = ExtResource("21")
bus = &"SoundFX"

[node name="CanvasLayer" type="CanvasLayer" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D/WeaponManager/wep_fists"]

[node name="Control" type="Control" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D/WeaponManager/wep_fists/CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D/WeaponManager/wep_fists/CanvasLayer/Control"]
position = Vector2(0, -270)
scale = Vector2(3, 3)
texture = ExtResource("9")
hframes = 4

[node name="wep_shotgun" type="Node3D" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D/WeaponManager"]
script = ExtResource("13")
item_weapon_data = SubResource("Resource_71jn7")

[node name="RangeRayCast" type="RayCast3D" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D/WeaponManager/wep_shotgun"]
target_position = Vector3(0, 0, -10)
collision_mask = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D/WeaponManager/wep_shotgun"]
stream = ExtResource("22")

[node name="AnimationPlayer" type="AnimationPlayer" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D/WeaponManager/wep_shotgun"]
libraries = {
"": SubResource("AnimationLibrary_ecwd5")
}

[node name="CanvasLayer" type="CanvasLayer" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D/WeaponManager/wep_shotgun"]

[node name="Control" type="Control" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D/WeaponManager/wep_shotgun/CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D/WeaponManager/wep_shotgun/CanvasLayer/Control"]
position = Vector2(0, -269)
scale = Vector2(3, 3)
texture = ExtResource("7")
hframes = 5

[node name="muzzle_flash" type="OmniLight3D" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.3)
visible = false
light_color = Color(1, 0.87451, 0.572549, 1)
light_energy = 5.0
omni_range = 10.0

[node name="UI" type="CanvasLayer" parent="."]
layer = 0

[node name="Bars" type="VBoxContainer" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -430.0
offset_top = 32.0
offset_right = -30.0
offset_bottom = 64.0
grow_horizontal = 0

[node name="health_pox" type="PanelContainer" parent="UI/Bars"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("27")

[node name="health_bar" type="TextureProgressBar" parent="UI/Bars/health_pox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 35.0
nine_patch_stretch = true
texture_under = ExtResource("18")
texture_progress = ExtResource("11")
tint_under = Color(0, 0, 0, 1)
tint_progress = Color(0.627451, 0.0901961, 0.0901961, 1)
script = ExtResource("18_fpf0a")

[node name="pox_bar" type="TextureProgressBar" parent="UI/Bars/health_pox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 44.0
fill_mode = 1
nine_patch_stretch = true
texture_progress = ExtResource("11")
tint_progress = Color(0.623529, 0.67451, 0, 1)
script = ExtResource("18_fpf0a")

[node name="VBoxContainer" type="HBoxContainer" parent="UI/Bars/health_pox/pox_bar"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="UI/Bars/health_pox/pox_bar/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
label_settings = SubResource("LabelSettings_a1e3n")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="UI/Bars/health_pox/pox_bar/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
label_settings = SubResource("LabelSettings_ecj5b")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="UI/Bars/health_pox/pox_bar/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
text = "blood"
label_settings = SubResource("LabelSettings_rl7ch")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="UI/Bars/health_pox/pox_bar/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
label_settings = SubResource("LabelSettings_wbsqx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="UI/Bars/health_pox/pox_bar/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
label_settings = SubResource("LabelSettings_uehl5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="armor_bar" type="TextureProgressBar" parent="UI/Bars/health_pox"]
visible = false
layout_mode = 2
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("18")
texture_progress = ExtResource("11")
tint_under = Color(0, 0, 0, 1)
tint_progress = Color(0, 0.0352941, 0.513726, 1)
script = ExtResource("18_fpf0a")

[node name="Label" type="Label" parent="UI/Bars/health_pox/armor_bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("8")
theme_override_font_sizes/font_size = 35
text = "carapace"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HotBarInventory" parent="UI" instance=ExtResource("8")]
offset_left = 5.0
offset_top = 5.0
offset_right = 21.0
offset_bottom = 21.0

[node name="Notifications" type="Control" parent="UI" node_paths=PackedStringArray("notifications_text")]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
mouse_filter = 2
script = ExtResource("12")
notifications_text = NodePath("PanelContainer/MarginContainer/RichTextLabel")

[node name="PanelContainer" type="PanelContainer" parent="UI/Notifications"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 550.0
grow_vertical = 0
theme_override_styles/panel = SubResource("29")

[node name="MarginContainer" type="MarginContainer" parent="UI/Notifications/PanelContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Notifications/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
theme_override_fonts/normal_font = SubResource("20")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "test text here"
